# Minecraft-Clone

./: .gitattributes  .gitignore  .gitmodules  .tokeignore  CMakeLists.txt  README.md  TODO.md  TODO.txt  p.py  requirements.txt
Pathtracer/: CMakeLists.txt
Pathtracer/src/: Color.hpp  Hittable.hpp  Ray.hpp  Sphere.hpp  Vector.cpp  Vector.hpp  main.cpp  vec3.hpp
Pathtracer/tools/windows/: configure.bat
include/glad/: glad.h
lib/: glad.c
lib/imgui/: imgui_demo.cpp  imgui_impl_glfw.cpp
res/: blocks.yml  materials.yml
res/data/blocks/: blocks.yml  sounds.yml
res/shaders/: chunk.shader  crosshair.shader  custom_model.shader  framebuffer.shader  postprocess.shader  skybox.shader  water.shader
src/: gl.c  main.cpp
src/core/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Game.cpp  Game.hpp  Shader.cpp  Shader.hpp  SoundEngine.cpp  SoundEngine.hpp  Window.cpp  Window.hpp
src/math/: AABB.cpp  AABB.hpp  Frustum.cpp  Frustum.hpp  Mat2.cpp  Mat2.hpp  Mat3.cpp  Mat3.hpp  Mat4.cpp  Mat4.hpp  Math.cpp  Math.hpp  Matrix.cpp  Matrix.hpp  Raycast.cpp  Raycast.hpp  Vec2.cpp  Vec2.hpp  Vec3.cpp  Vec3.hpp  Vec4.cpp  Vec4.hpp  Vector.cpp  Vector.hpp  VoxelRaycast.cpp  VoxelRaycast.hpp
src/opengl/: BufferObject.cpp  BufferObject.hpp  Framebuffer.cpp  Framebuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  MSAARenderer.cpp  MSAARenderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  Window.cpp  Window.hpp
src/scripts/: atlas_make.py  cls_make.py
src/ui/: Crosshair.cpp  Crosshair.hpp
src/util/: Concepts.hpp  Constants.hpp  Exceptions.hpp  IO.hpp  Log.cpp  Log.hpp  MutexHolder.hpp  RLE.hpp  TextureLoad.cpp  TextureLoad.hpp  Util.hpp
src/world/: Block.cpp  Block.hpp  Chunk.cpp  Chunk.hpp  ChunkMesher.cpp  ChunkMesher.hpp  Player.cpp  Player.hpp  Skybox.cpp  Skybox.hpp  World.cpp  World.hpp
src/world/chunk/: Chunk.cpp  Chunk.hpp  ChunkMesher.cpp  ChunkMesher.hpp  ChunkRegion.cpp  ChunkRegion.hpp  ChunkStack.cpp  ChunkStack.hpp  Constants.hpp
tools/linux/: configure_debug.sh  configure_release.sh
tools/unix/: build.sh  configure.sh  output.txt  run.sh
tools/windows/: configure.bat
